--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apt-get-app",
+  "name": "apt-get-app-new",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,31 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tabler/icons-react": "^3.26.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.15.0",
-    "icons-react": "^3.7.1",
     "lucide-react": "^0.469.0",
-    "next": "15.1.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tabler": "^1.0.0-alpha.8",
+    "next": "14.2.16",
+    "next-themes": "^0.4.4",
+    "react": "^18",
+    "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
-  },
-  "overrides": {
-    "framer-motion": {
-      "react": "19.0.0-rc-66855b96-20241106",
-      "react-dom": "19.0.0-rc-66855b96-20241106"
-    }
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.17",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.16"
   }
 }
